[package]
name = "rs-imghead2mime"
version = "0.1.0"
edition = "2024"

exclude = [
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"
panic = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.infer]
version = "0.19"
features = [
    "std",
]
